# variant

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  config.html  design.html  index.html  introduction.html  reference.html
cmake/: eggs.variant-config.cmake.in
css/: main.css
docs/: README.md  config.md  design.md  index.md  introduction.md  reference.Doxyfile
docs/css/: main.css
include/eggs/: variant.hpp
include/eggs/variant/: bad_variant_access.hpp  in_place.hpp  nullvariant.hpp  variant.hpp
include/eggs/variant/detail/: apply.hpp  pack.hpp  storage.hpp  utility.hpp  visitor.hpp
include/eggs/variant/detail/config/: prefix.hpp  suffix.hpp
test/: CMakeLists.txt  README.md  apply.cpp  assign.conversion.cpp  assign.copy.cpp  assign.emplace.cpp  assign.move.cpp  catch.cpp  catch.hpp  cnstr.conversion.cpp  cnstr.copy.cpp  cnstr.default.cpp  cnstr.emplace.cpp  cnstr.move.cpp  constexpr.hpp  dtor.cpp  dtor.hpp  elem.get.cpp  elem.get_if.cpp  hash.cpp  helper.cpp  in_place.cpp  obs.bool.cpp  obs.target.cpp  obs.target_type.cpp  obs.which.cpp  rel.equality.cpp  rel.order.cpp  swap.cpp  throw.hpp
